--- a/tmob/static/js/template/result/image.html
+++ b/tmob/static/js/template/result/image.html
@@ -1,5 +1,5 @@
 <div class="image-result">
-    <a href="#" class="trackback-link pull-right" data-url="{{ target.url }}">{{ trackback_total }}</a>
+    <a href="#" class="trackback-link pull-right badge" data-url="{{ target.url }}">{{ trackback_total }}</a>
     <div class="media">
         <a class="pull-left" href="{{ target.url }}"><img class="media-object" src="{{ target.medium_thumbnail }}" width="120" height="120" style="width: 120px; height: 120px; display: inline-block"></a>
         <div class="media-body">
