--- a/tmob/static/js/template/result/link.html
+++ b/tmob/static/js/template/result/link.html
@@ -1,5 +1,5 @@
 <div class="link-result">
-    <a href="#" class="trackback-link pull-right" data-url="{{ target.url }}">{{ trackback_total }}</a>
+    <a href="#" class="trackback-link pull-right badge" data-url="{{ target.url }}">{{ trackback_total }}</a>
     <a href="{{ target.url }}">{{ target.title }}</a>
-    <div>{{ target.url }}</div>
+    <div class="domain">{{domain target.url }}</div>
 </div>
