--- a/tmob/static/js/template/result/tweet.html
+++ b/tmob/static/js/template/result/tweet.html
@@ -1,5 +1,5 @@
 <div class="tweet-result">
-    <a href="#" class="trackback-link pull-right" data-url="{{ target.url }}">{{ trackback_total }}</a>
+    <a href="#" class="trackback-link pull-right badge" data-url="{{ target.url }}">{{ trackback_total }}</a>
     <div class="media">
         <a class="pull-left" href="{{ target.url }}"><img class="media-object" src="{{ author_img }}"></a>
         <div class="media-body">
