fixed events sharing across views

--- a/tmob/static/js/template/view/home.html
+++ b/tmob/static/js/template/view/home.html
@@ -7,7 +7,7 @@
     <div class="row">
         <form id="search-form" class="form">
             <span class="input-append">
-                <input id="search-input" type="text">
+                <input id="search-input" type="text" placeholder="Search">
                 <button id="search-submit" type="submit" class="btn"><i class="icon-search"></i></button>
             </span>
         </form>
