--- a/tmob/static/js/template/result/image.html
+++ b/tmob/static/js/template/result/image.html
@@ -4,6 +4,7 @@
         <a class="pull-left" href="{{ target.url }}"><img class="media-object" src="{{ target.medium_thumbnail }}" width="120" height="120" style="width: 120px; height: 120px; display: inline-block"></a>
         <div class="media-body">
             <a href="{{ target.url }}">{{ target.title }}</a>
+            <div class="domain">{{domain target.url }}</div>
         </div>
     </div>
 </div>
