--- a/tmob/static/js/template/result/tweet.html
+++ b/tmob/static/js/template/result/tweet.html
@@ -1,9 +1,17 @@
 <div class="tweet-result">
     <a href="#" class="trackback-link pull-right badge" data-url="{{ target.url }}">{{ trackback_total }}</a>
     <div class="media">
-        <a class="pull-left" href="{{ target.url }}"><img class="media-object" src="{{ author_img }}"></a>
+        <a class="pull-left" href="{{ target.url }}"><img class="media-object" src="{{ author_img }}" width="64" height="64" style="width: 64px; height: 64px"></a>
         <div class="media-body">
             <a href="{{ author_url }}">{{ author_nick }}</a>: {{ target.title }}
+            <ul class="inline">
+                <li><small><a href="{{ target.url }}" class="muted"><span class="icon-twitter"></span> <span class="relative-date" data-timestamp="{{ date }}">{{relative_date date }}</span></a></small></li>
+                <li><small><a href="https://twitter.com/intent/tweet?in_reply_to={{tweet_id target.url }}" class="muted"><i class="icon-reply"></i>Reply</a></small></li>
+                <li><small><a href="https://twitter.com/intent/retweet?tweet_id={{tweet_id target.url }}" class="muted"><i class="icon-retweet"></i>Retweet</a></small></li>
+                <li><small><a href="https://twitter.com/intent/favorite?tweet_id={{tweet_id target.url }}" class="muted"><i class="icon-star-empty"></i>Favorite</a></small></li>
+            </ul>
         </div>
+
+
     </div>
 </div>
