--- a/tmob/templates/home.html
+++ b/tmob/templates/home.html
@@ -8,6 +8,8 @@
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet"/>
+
     <!--
     <script src="{% static 'js/lib/angular.min.js' %}"></script>
     <script src="{% static 'js/app.js' %}"></script>
