--- a/tmob/static/partials/search-results.html
+++ b/tmob/static/partials/search-results.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-static-top" role="navigation">
 <div search-form class="navbar-form"></div>
 </nav>
 <div search-results></div>
