--- a/tmob/templates/base.html
+++ b/tmob/templates/base.html
@@ -9,16 +9,23 @@
     <link href="{% static 'libs/bootstrap/css/bootstrap-theme.min.css' %}" rel="stylesheet">
     <link href="{% static 'libs/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="{% static 'libs/angular.js' %}"></script>
+    <script src="{% static 'libs/ng-infinite-scroll.js' %}"></script>
     <script src="{% static 'libs/moment.js' %}"></script>
     <script src="{% static 'libs/accounting.js' %}"></script>
-    <script src="{% static 'js/services/config.js' %}"></script>
-    <script src="{% static 'js/services/api.js' %}"></script>
     <script src="{% static 'js/controllers/search.js' %}"></script>
     <script src="{% static 'js/controllers/trackback.js' %}"></script>
     <script src="{% static 'js/controllers/trending.js' %}"></script>
+    <script src="{% static 'js/directives/content/content.js' %}"></script>
     <script src="{% static 'js/directives/search/search.js' %}"></script>
+    <script src="{% static 'js/filters/dates.js' %}"></script>
+    <script src="{% static 'js/filters/numbers.js' %}"></script>
+    <script src="{% static 'js/filters/twitter.js' %}"></script>
+    <script src="{% static 'js/services/api.js' %}"></script>
+    <script src="{% static 'js/services/config.js' %}"></script>
     <script src="{% static 'js/apps/main.js' %}"></script>
+    <script src="//platform.twitter.com/widgets.js"></script>
 </head>
 <body>
 <div ng-view></div>
